--- a/public/Kanbas/Courses/Nav/largecnav.html
+++ b/public/Kanbas/Courses/Nav/largecnav.html
@@ -120,7 +120,7 @@
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">
             <span class="wd-icon-fontsize"><i class="fa fa-cog" aria-hidden="true"></i>Settings</span>
         </a>
     </li>
