--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -173,12 +173,12 @@
     </div>
 
     <h3>Absolute position</h3>
-    <div class="wd-pos-relative">
+    <div class="position-relative">
     <div class="wd-pos-absolute-10-10 
         wd-bg-color-yellow wd-dimension-portrait">
         Portrait
     </div>
-    <div class="wd-pos-absolute-50-50 
+    <div class="wd-pos-absolute-50-50
             wd-bg-color-blue wd-fg-color-white 
             wd-dimension-landscape">
         Landscape   </div>
@@ -204,7 +204,7 @@
     </div>
 
     <h2>Z index</h2>
-    <div class="wd-pos-relative">
+    <div class="position-relative">
     <div class="wd-pos-absolute-10-10 
             wd-bg-color-yellow 
             wd-dimension-portrait">
